// Copyright 2024 Apple Inc. and the Swift Homomorphic Encryption project authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

enum ImageFormat {
    IMAGE_FORMAT_UNSPECIFIED = 0;
    IMAGE_FORMAT_HEIC = 1;
}

enum IdentityCategory {
    IDENTITY_CATEGORY_UNSPECIFIED = 0;
    IDENTITY_CATEGORY_PERSON = 1;
    IDENTITY_CATEGORY_BUSINESS = 2;
}

message Icon {
    ImageFormat format = 1;
    bytes image = 2;
}

message CallIdentity {
    // identity information
    string name = 1;
    // icon
    Icon icon = 2;
    // how many minutes to keep this entry in the cache
    uint32 cache_expiry_minutes = 3;
    // identity category
    IdentityCategory category = 4;
}
